--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobileExchangeProject</string>
+    <string name="open">Open Nav Drawer</string>
+    <string name="close">close Nav Drawer</string>
+
 </resources>
